--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ header a{
 }
 .thumbnail .item{
     width: 20%;
-    height: 140px;
+    height: 85px;
     flex-shrink: 0;
     position: relative;
 }
@@ -108,6 +108,7 @@ header a{
     bottom: 10px;
     left: 10px;
     right: 10px;
+    font-size: 0.6em;
 }
 .thumbnail .item .content .title{
     font-weight: 500;
